@@ -2,6 +2,7 @@
 
 - Added **Paste** button to quickly insert VB into the window
 - Fixed parsing error if a **label named "Loop<someting>"** was present in a Do .. Loop
+- Added detection for **Decimal** floats
 
 **0.4.0.4**
 
